test/failing/cycle4.trunnel

struct x {
  struct y {
    struct x the_x;
  } the_ys[3];
}

